# clang_tidy_hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: pre-commit_ci.yml  pytest.yml  python-package.yml
hook/: clang_tidy_runner.py  compilation_database.py  compile_db_utils.py  file_utils.py  main.py  path_utils.py
tests/test_hook/: cmake_helper.py  test_clang_tidy_runner.py  test_compilation_database.py  test_compile_db_utils.py  test_file_utils.py  test_main.py  test_path_utils.py
tests/test_hook/dummy_project/: CMakeLists.txt  err.c  err.cpp  ok.cpp
tests/test_hook/dummy_project/include/: ok.h
