[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clang-tidy-hook"
version = "0.0.0"
dependencies = [
  "clang-tidy==17.0.1",
]
requires-python = ">=3.6"

description = "pre-commit hooks for clang-tidy usage on a C/CPP project"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pre-commit", "clang-tidy", "clang", "hook"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = [
  "cmake>=3.16",
  "pre-commit>=2.17.0",
  "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/mxmlnrdr/clang_tidy_hook.git"
"Bug Tracker" = "https://github.com/mxmlnrdr/clang_tidy_hook/issues"

[project.scripts]
clang-tidy-hook = "hook.main:main"
