[metadata]
name = clang-tidy-hook
description = pre-commit hooks for clang-tidy usage on a bricks project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    clang-tidy-hook = hook.main:main

[options.packages.find]


[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
